k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service-service
spec:
  selector:
    app: client-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
